exercise 3 - lookup any word with incomplete css

--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> </title>
+        <title>Web Dictionary</title>
+        <link rel="stylesheet" href="index.css" type="text/css" />
         <script type="text/javascript" src="index.js"></script>
     </head>
     <body>
-        <input type="text" name="searchfield"/>
-        <button id="search">Search</button>
+        <div id="header">
+            <h1>Web Dictionary</h1>
+        </div>
+        <div>
+            <p>Lookup the definition of a word (e.g. ajax, html, bar, php, javascript or css)</p>
+            <input id="field" type="text" name="searchfield"/>
+            <button id="search">Search</button>
+            <div id="result">
+                <h1>Result</h1>
+            </div>
+        </div>
     </body>
 </html>
