exercise 4 - xml data with incomplete css

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
         <div id="header">
             <h1>Web Dictionary</h1>
         </div>
-        <div>
+        <div id="information">
             <p>Lookup the definition of a word (e.g. ajax, html, bar, php, javascript or css)</p>
             <input id="field" type="text" name="searchfield"/>
             <button id="search">Search</button>
+            <button id="all-searches">Get All Definitions</button>
+            <h1>Result</h1>
             <div id="result">
-                <h1>Result</h1>
             </div>
         </div>
     </body>
